frontend/test/should_pass/computations_for_integer_range_exec.grg
rule r() : (int)
{	
	modify {
		def var res:int = 0;
		
		exec ( 
			for{i:int in [0:100]; { yield res = res + 1 } }
			;> x:int = 10 ;> y:int = 0 ;>
			for{i:int in [x:y]; { yield res = res + 1; } }
		);
		
		return (res);
	}
}

rule r2() : (int)
{	
	modify {
		def var res:int = 0;
		
		exec ( 
			for{i:int in [0:100]; { yield res = res + 1 } }
			;> ::x = 10 ;> ::y = 0 ;>
			for{::i in [::x : ::y]; { yield res = res + 1; } }
		);
		
		return (res);
	}
}
