frontend/test/should_fail/exectype_SetVisited.grg
using exectype;

rule r
{
	modify  {
		exec(x:foo=foo::Bla && i:int=0 && y:boolean=true && {x.visited[i]=y});
	}
}